<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/about" android:icon="@android:drawable/ic_menu_help"
            android:title="@string/about" />
        <item android:id="@+id/nav_gallery" android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/help" />
        <item android:id="@+id/nav_slideshow" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/feedback" />
        <item android:id="@+id/settings" android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/action_settings" />
        <item android:id="@+id/messages" android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/message" />
        <item android:id="@+id/view" android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/view" />
    </group>


</menu>