<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/app_bar_main"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:background="@color/whiteback"
        android:orientation="vertical"
        android:padding="10dip">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dip"
            android:paddingBottom = "20dip"
            android:gravity="center_horizontal"
            android:orientation="vertical" >


            <TextView
                android:id="@+id/tvtrack"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="15dip"
                android:text="@string/track"
                android:textColor="#027f7c"
                android:textSize="22dip" />


            <Button
                android:id="@+id/btnTrack"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_marginBottom="25dp"
                android:gravity="center"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_weight="0.26"
                android:background="#027f7c"
                android:text="@string/trackLogin"
                android:textColor="#ffffff"
                android:textSize="14dip" />

            <TextView
                android:id="@+id/tvView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="15dip"
                android:text="@string/view"
                android:textColor="#000077"
                android:textSize="22dip" />


            <Button
                android:id="@+id/btnView"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_marginBottom="25dp"
                android:gravity="center"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_weight="0.26"
                android:background="#000077"
                android:text="@string/viewTracks"
                android:textColor="#ffffff"
                android:textSize="14dip" />
            <TextView
                android:id="@+id/tvMessages"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/register"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="15dip"
                android:text="@string/message"
                android:textColor="#550000"
                android:textSize="22dip" />


            <Button
                android:id="@+id/btnMessages"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:gravity="center"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginBottom="15dip"
                android:layout_weight="0.26"
                android:background="#aa0000"
                android:text="@string/viewMessage"
                android:textColor="#ffffff"
                android:textSize="14dip" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
