<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    tools:context=".LoginActivity">

    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
            android:layout_width="match_parent" android:layout_height="70dip"
            android:background="@color/appcolour" app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout  android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".LoginActivity">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:background="#118888" >

            <TextView android:id = "@+id/texts"
                android:layout_width="fill_parent"
                android:layout_height="30dip"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="4dip"
                android:paddingTop="5dip"
                android:text="@string/emlogin"
                android:textSize="20dip"
                android:textColor="#ffffff"/>

        </LinearLayout>
        <!-- Registration Form -->
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/header"

            android:background="#ffffff"

            android:orientation="vertical"
            android:padding="10dip" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/header"
                android:background="#ffffff"
                android:orientation="vertical"
                android:padding="10dip" >
                <TextView
                    android:id="@+id/ttext"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"

                    android:layout_alignParentLeft="true"
                    android:layout_marginBottom="20dip"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:paddingBottom="10dip"
                    android:paddingTop="10dip"
                    android:text="@string/pls"
                    android:textColor="#118888"
                    android:textSize="22dip" />

                <EditText
                    android:id="@+id/etcode"
                    android:layout_width="fill_parent"
                    android:layout_height="40dip"
                    android:layout_marginBottom="50dip"
                    android:layout_marginLeft="15dip"
                    android:layout_marginRight="15dip"
                    android:layout_marginTop="5dip"
                    android:background="#dddddd"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/emcode"
                    android:singleLine="true"
                    android:inputType="text"/>


                <EditText
                    android:id="@+id/etpassword"
                    android:layout_width="fill_parent"
                    android:layout_height="40dip"
                    android:layout_marginBottom="40dip"
                    android:layout_marginLeft="15dip"
                    android:layout_marginRight="15dip"
                    android:layout_marginTop="5dip"
                    android:background="#dddddd"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:password="true"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/btnlogin"
                    android:layout_width="fill_parent"
                    android:layout_height="40dip"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"

                    android:layout_marginLeft="15dip"
                    android:layout_marginRight="15dip"
                    android:layout_weight="0.26"
                    android:background="@drawable/shape1"
                    android:text="login"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/tvforgot"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/register"
                    android:layout_alignParentLeft="true"
                    android:layout_marginBottom="20dip"
                    android:gravity="center"

                    android:text="forgot password"
                    android:textColor="#025f7c"
                    android:textSize="15dip" />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>

